# earthquakemap-streamlit

./: README.md  pyproject.toml  requirements.txt
earthquakemap_streamlit/: streamlit_app.py
