[tool.poetry]
name = "earthquakemap-streamlit"
version = "0.1.0"
description = ""
authors = ["Jonathan Cutrer <joncutrer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
pandas = "^2.2.2"
folium = "^0.16.0"
requests = "^2.32.3"
streamlit-folium = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
